# docs/swagger.json
@@ -16,6 +16,29 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/categories": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "get all categories",
+                "operationId": "get-all-categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/products.Category"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/me": {
             "get": {
                 "consumes": [
@@ -58,11 +81,22 @@
                 ],
                 "summary": "get all products",
                 "operationId": "get-all-products",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "category_id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/products.Product"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/products.Product"
+                            }
                         }
                     }
                 }
@@ -184,6 +218,12 @@
         "products.Product": {
             "type": "object",
             "properties": {
+                "category": {
+                    "$ref": "#/definitions/products.Category"
+                },
+                "categoryID": {
+                    "type": "integer"
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -208,12 +248,6 @@
                 "price": {
                     "type": "integer"
                 },
-                "productCategories": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/products.ProductCategory"
-                    }
-                },
                 "productImages": {
                     "type": "array",
                     "items": {
@@ -225,23 +259,6 @@
                 },
                 "updatedAt": {
                     "type": "string"
-                }
-            }
-        },
-        "products.ProductCategory": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "$ref": "#/definitions/products.Category"
-                },
-                "categoryID": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "productID": {
-                    "type": "integer"
                 }
             }
         },
